--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,5 +29,12 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "cypress.config.ts"
+  ]
+
 }
